--- a/LearnOpenGL/LearnOpenGL.vcxproj.filters
+++ b/LearnOpenGL/LearnOpenGL.vcxproj.filters
@@ -18,4 +18,17 @@
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="shader.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\shaders\shader.fs">
+      <Filter>源文件</Filter>
+    </None>
+    <None Include="..\shaders\shader.vs">
+      <Filter>源文件</Filter>
+    </None>
+  </ItemGroup>
 </Project>
