--- a/src/LearnOpenGL.vcxproj
+++ b/src/LearnOpenGL.vcxproj
@@ -19,20 +19,23 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\thirdParty\glad\src\glad.c" />
-    <ClCompile Include="..\thirdParty\stb_image\stb_image.cpp" />
+    <ClCompile Include="glad.c" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\thirdParty\stb_image\stb_image.h" />
-    <ClInclude Include="shader.h" />
+    <ClInclude Include="..\includes\glad.h" />
+    <ClInclude Include="..\includes\khrplatform.h" />
+    <ClInclude Include="..\includes\shader.h" />
+    <ClInclude Include="..\includes\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\shaders\shader.frag" />
-    <None Include="..\shaders\shader.vert" />
+    <Image Include="..\resources\awesomeface.png" />
+    <Image Include="..\resources\container.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\assets\container.jpg" />
+    <None Include="..\resources\shaders\shader.frag" />
+    <None Include="..\resources\shaders\shader.vert" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
@@ -87,7 +90,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>D:\SDKs\glfw-3.4.bin.WIN64\include;D:\DevelopProject\LearnOpenGL\thirdParty\glad\include;D:\DevelopProject\LearnOpenGL\thirdParty\stb_image;$(IncludePath)</IncludePath>
+    <IncludePath>D:\SDKs\glfw-3.4.bin.WIN64\include;D:\DevelopProject\LearnOpenGL\includes;$(IncludePath)</IncludePath>
     <LibraryPath>D:\SDKs\glfw-3.4.bin.WIN64\lib-vc2022;$(LibraryPath)</LibraryPath>
     <SourcePath>$(SourcePath)</SourcePath>
     <ReferencePath>$(ReferencePath)</ReferencePath>
