--- a/src/LearnOpenGL.vcxproj.filters
+++ b/src/LearnOpenGL.vcxproj.filters
@@ -37,6 +37,9 @@
     <ClInclude Include="..\includes\stb_image.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="..\includes\camera.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\resources\container.jpg">
