--- a/src/LearnOpenGL.vcxproj
+++ b/src/LearnOpenGL.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\includes\camera.h" />
     <ClInclude Include="..\includes\glad.h" />
     <ClInclude Include="..\includes\khrplatform.h" />
     <ClInclude Include="..\includes\shader.h" />
