--- a/src/LearnOpenGL.vcxproj
+++ b/src/LearnOpenGL.vcxproj
@@ -33,6 +33,8 @@
   <ItemGroup>
     <Image Include="..\resources\awesomeface.png" />
     <Image Include="..\resources\container.jpg" />
+    <Image Include="..\resources\container2.png" />
+    <Image Include="..\resources\container2_specular.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\resources\shaders\lampshader.frag" />
