--- a/src/LearnOpenGL.vcxproj.filters
+++ b/src/LearnOpenGL.vcxproj.filters
@@ -54,6 +54,9 @@
     <Image Include="..\resources\container2_specular.png">
       <Filter>resource</Filter>
     </Image>
+    <Image Include="..\resources\matrix.jpg">
+      <Filter>resource</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\resources\shaders\objectshader.frag">
