--- a/src/LearnOpenGL.vcxproj
+++ b/src/LearnOpenGL.vcxproj
@@ -52,9 +52,34 @@
     <Image Include="..\resources\marble.jpg" />
     <Image Include="..\resources\matrix.jpg" />
     <Image Include="..\resources\metal.png" />
+    <Image Include="..\resources\nanosuit_reflection\arm_dif.png" />
+    <Image Include="..\resources\nanosuit_reflection\arm_showroom_ddn.png" />
+    <Image Include="..\resources\nanosuit_reflection\arm_showroom_refl.png" />
+    <Image Include="..\resources\nanosuit_reflection\arm_showroom_spec.png" />
+    <Image Include="..\resources\nanosuit_reflection\body_dif.png" />
+    <Image Include="..\resources\nanosuit_reflection\body_showroom_ddn.png" />
+    <Image Include="..\resources\nanosuit_reflection\body_showroom_refl.png" />
+    <Image Include="..\resources\nanosuit_reflection\body_showroom_spec.png" />
+    <Image Include="..\resources\nanosuit_reflection\glass_ddn.png" />
+    <Image Include="..\resources\nanosuit_reflection\glass_dif.png" />
+    <Image Include="..\resources\nanosuit_reflection\glass_refl.png" />
+    <Image Include="..\resources\nanosuit_reflection\hand_dif.png" />
+    <Image Include="..\resources\nanosuit_reflection\hand_showroom_ddn.png" />
+    <Image Include="..\resources\nanosuit_reflection\hand_showroom_refl.png" />
+    <Image Include="..\resources\nanosuit_reflection\hand_showroom_spec.png" />
+    <Image Include="..\resources\nanosuit_reflection\helmet_diff.png" />
+    <Image Include="..\resources\nanosuit_reflection\helmet_showroom_ddn.png" />
+    <Image Include="..\resources\nanosuit_reflection\helmet_showroom_refl.png" />
+    <Image Include="..\resources\nanosuit_reflection\helmet_showroom_spec.png" />
+    <Image Include="..\resources\nanosuit_reflection\leg_dif.png" />
+    <Image Include="..\resources\nanosuit_reflection\leg_showroom_ddn.png" />
+    <Image Include="..\resources\nanosuit_reflection\leg_showroom_refl.png" />
+    <Image Include="..\resources\nanosuit_reflection\leg_showroom_spec.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\resources\backpack\backpack.mtl" />
+    <None Include="..\resources\nanosuit_reflection\nanosuit.blend" />
+    <None Include="..\resources\nanosuit_reflection\nanosuit.mtl" />
     <None Include="..\resources\shaders\backPackshader.frag" />
     <None Include="..\resources\shaders\backPackshader.vert" />
     <None Include="..\resources\shaders\lampshader.frag" />
@@ -72,6 +97,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\resources\backpack\source_attribution.txt" />
+    <Text Include="..\resources\nanosuit_reflection\LICENSE.txt" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
