--- a/src/LearnOpenGL.vcxproj.filters
+++ b/src/LearnOpenGL.vcxproj.filters
@@ -21,6 +21,9 @@
     <Filter Include="resource\images">
       <UniqueIdentifier>{ac154276-004c-4e91-9e74-0dda8f6862ca}</UniqueIdentifier>
     </Filter>
+    <Filter Include="resource\nanosuit">
+      <UniqueIdentifier>{ac284571-3298-433c-97ef-ee6aae745574}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="glad.c">
@@ -114,6 +117,75 @@
     <Image Include="..\resources\metal.png">
       <Filter>resource\images</Filter>
     </Image>
+    <Image Include="..\resources\nanosuit_reflection\arm_dif.png">
+      <Filter>resource\nanosuit</Filter>
+    </Image>
+    <Image Include="..\resources\nanosuit_reflection\arm_showroom_ddn.png">
+      <Filter>resource\nanosuit</Filter>
+    </Image>
+    <Image Include="..\resources\nanosuit_reflection\arm_showroom_refl.png">
+      <Filter>resource\nanosuit</Filter>
+    </Image>
+    <Image Include="..\resources\nanosuit_reflection\arm_showroom_spec.png">
+      <Filter>resource\nanosuit</Filter>
+    </Image>
+    <Image Include="..\resources\nanosuit_reflection\body_dif.png">
+      <Filter>resource\nanosuit</Filter>
+    </Image>
+    <Image Include="..\resources\nanosuit_reflection\body_showroom_ddn.png">
+      <Filter>resource\nanosuit</Filter>
+    </Image>
+    <Image Include="..\resources\nanosuit_reflection\body_showroom_refl.png">
+      <Filter>resource\nanosuit</Filter>
+    </Image>
+    <Image Include="..\resources\nanosuit_reflection\body_showroom_spec.png">
+      <Filter>resource\nanosuit</Filter>
+    </Image>
+    <Image Include="..\resources\nanosuit_reflection\glass_ddn.png">
+      <Filter>resource\nanosuit</Filter>
+    </Image>
+    <Image Include="..\resources\nanosuit_reflection\glass_dif.png">
+      <Filter>resource\nanosuit</Filter>
+    </Image>
+    <Image Include="..\resources\nanosuit_reflection\glass_refl.png">
+      <Filter>resource\nanosuit</Filter>
+    </Image>
+    <Image Include="..\resources\nanosuit_reflection\hand_dif.png">
+      <Filter>resource\nanosuit</Filter>
+    </Image>
+    <Image Include="..\resources\nanosuit_reflection\hand_showroom_ddn.png">
+      <Filter>resource\nanosuit</Filter>
+    </Image>
+    <Image Include="..\resources\nanosuit_reflection\hand_showroom_refl.png">
+      <Filter>resource\nanosuit</Filter>
+    </Image>
+    <Image Include="..\resources\nanosuit_reflection\hand_showroom_spec.png">
+      <Filter>resource\nanosuit</Filter>
+    </Image>
+    <Image Include="..\resources\nanosuit_reflection\helmet_diff.png">
+      <Filter>resource\nanosuit</Filter>
+    </Image>
+    <Image Include="..\resources\nanosuit_reflection\helmet_showroom_ddn.png">
+      <Filter>resource\nanosuit</Filter>
+    </Image>
+    <Image Include="..\resources\nanosuit_reflection\helmet_showroom_refl.png">
+      <Filter>resource\nanosuit</Filter>
+    </Image>
+    <Image Include="..\resources\nanosuit_reflection\helmet_showroom_spec.png">
+      <Filter>resource\nanosuit</Filter>
+    </Image>
+    <Image Include="..\resources\nanosuit_reflection\leg_dif.png">
+      <Filter>resource\nanosuit</Filter>
+    </Image>
+    <Image Include="..\resources\nanosuit_reflection\leg_showroom_ddn.png">
+      <Filter>resource\nanosuit</Filter>
+    </Image>
+    <Image Include="..\resources\nanosuit_reflection\leg_showroom_refl.png">
+      <Filter>resource\nanosuit</Filter>
+    </Image>
+    <Image Include="..\resources\nanosuit_reflection\leg_showroom_spec.png">
+      <Filter>resource\nanosuit</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\resources\backpack\backpack.mtl">
@@ -146,6 +218,12 @@
     <None Include="..\resources\shaders\skyboxshader.vert">
       <Filter>resource\shaders</Filter>
     </None>
+    <None Include="..\resources\nanosuit_reflection\nanosuit.blend">
+      <Filter>resource\nanosuit</Filter>
+    </None>
+    <None Include="..\resources\nanosuit_reflection\nanosuit.mtl">
+      <Filter>resource\nanosuit</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Object Include="..\resources\backpack\backpack.obj">
@@ -155,6 +233,9 @@
   <ItemGroup>
     <Text Include="..\resources\backpack\source_attribution.txt">
       <Filter>resource\backpack</Filter>
+    </Text>
+    <Text Include="..\resources\nanosuit_reflection\LICENSE.txt">
+      <Filter>resource\nanosuit</Filter>
     </Text>
   </ItemGroup>
 </Project>
