--- a/src/LearnOpenGL.vcxproj
+++ b/src/LearnOpenGL.vcxproj
@@ -82,6 +82,7 @@
     <None Include="..\resources\nanosuit_reflection\nanosuit.mtl" />
     <None Include="..\resources\shaders\backPackshader.frag" />
     <None Include="..\resources\shaders\backPackshader.vert" />
+    <None Include="..\resources\shaders\explode.geom" />
     <None Include="..\resources\shaders\lampshader.frag" />
     <None Include="..\resources\shaders\fboshader.frag" />
     <None Include="..\resources\shaders\objectshader.frag" />
