--- a/src/LearnOpenGL.vcxproj
+++ b/src/LearnOpenGL.vcxproj
@@ -86,6 +86,8 @@
     <None Include="..\resources\shaders\displayNormal.geom" />
     <None Include="..\resources\shaders\displayNormal.vert" />
     <None Include="..\resources\shaders\explode.geom" />
+    <None Include="..\resources\shaders\instance.frag" />
+    <None Include="..\resources\shaders\instance.vert" />
     <None Include="..\resources\shaders\lampshader.frag" />
     <None Include="..\resources\shaders\fboshader.frag" />
     <None Include="..\resources\shaders\objectshader.frag" />
